--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <head>
         <meta charset="utf-8">
         <title>modela Json</title>
-        <script src="modelJson.js"></script>        
+        <script src="modelJson.js"></script>
+        
 
     </head>
 
     <body>
 
-        <button onclick="remodelJson(JsonTest)">Modelagem</button>
+        <!-- <button onclick="remodelJson(JsonTest)">Modelagem</button> -->
     </body>
 
 
